// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card loading state 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c2 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
  min-width: 0px;
}

.S2 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 10px;
  min-width: 100%;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  height: 24px;
  margin-bottom: 10px;
  max-width: 300px;
  min-width: 0px;
}

.S4 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  height: 10px;
  margin-bottom: 10px;
  min-width: 0px;
}

.S5 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  height: 10px;
  margin-bottom: 0px;
  max-width: 240px;
  min-width: 0px;
}

.S6 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
  min-width: 100%;
}

.S7 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  -ms-flex-pack: end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 0px;
  min-width: 0px;
}

.IS1 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  padding-bottom: 150%;
}

.IS2 {
  background-image: linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS3 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS4 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS5 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS6 {
  height: 10;
  margin-bottom: 10px;
}

.IS7 {
  height: 10;
  margin-bottom: 10px;
}

.IS8 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS9 {
  height: 10;
  margin-bottom: 10px;
}

.IS10 {
  height: 10;
  margin-bottom: 10px;
}

.IS11 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS12 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS13 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}
</style>

<indexweb__FadeIn>
  <div
    className="c0 S1"
  >
    <div
      className="S7"
    >
      <div
        className="S2"
      >
        <TimesImage
          aspectRatio={0.6666666666666666}
          fadeImageIn={false}
          highResSize={800}
          lowResSize={60}
          onImagePress={null}
          uri="https://img.io/img"
        />
      </div>
      <div
        className="S6"
      >
        <Component>
          <Gradient
            className="IS4"
            degrees={264}
          />
          <Gradient
            className="IS7"
            degrees={267}
          />
          <Gradient
            className="IS10"
            degrees={267}
          />
          <Gradient
            className="IS13"
            degrees={267}
          />
        </Component>
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;

exports[`2. card with reversed loading state 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c2 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  height: 24px;
  margin-bottom: 10px;
  max-width: 300px;
  min-width: 0px;
}

.S2 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  height: 10px;
  margin-bottom: 10px;
  min-width: 0px;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  height: 10px;
  margin-bottom: 0px;
  max-width: 240px;
  min-width: 0px;
}

.S4 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 10px;
  min-width: 100%;
}

.S5 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
  min-width: 0px;
}

.S6 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
  min-width: 100%;
}

.S7 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -ms-flex-pack: end;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 0px;
  min-width: 0px;
}

.IS1 {
  background-image: linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS2 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS3 {
  height: 24;
  margin-bottom: 10px;
  max-width: 300;
}

.IS4 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS5 {
  height: 10;
  margin-bottom: 10px;
}

.IS6 {
  height: 10;
  margin-bottom: 10px;
}

.IS7 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS8 {
  height: 10;
  margin-bottom: 10px;
}

.IS9 {
  height: 10;
  margin-bottom: 10px;
}

.IS10 {
  background-image: linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%);
}

.IS11 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS12 {
  height: 10;
  margin-bottom: 0;
  max-width: 240;
}

.IS13 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  padding-bottom: 150%;
}
</style>

<indexweb__FadeIn>
  <div
    className="c0 S5"
  >
    <div
      className="S7"
    >
      <div
        className="S4"
      >
        <Component>
          <Gradient
            className="IS3"
            degrees={264}
          />
          <Gradient
            className="IS6"
            degrees={267}
          />
          <Gradient
            className="IS9"
            degrees={267}
          />
          <Gradient
            className="IS12"
            degrees={267}
          />
        </Component>
      </div>
      <div
        className="S6"
      >
        <TimesImage
          aspectRatio={0.6666666666666666}
          fadeImageIn={false}
          highResSize={800}
          lowResSize={60}
          onImagePress={null}
          uri="https://img.io/img"
        />
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;
